--- a/Charles_Liu.html
+++ b/Charles_Liu.html
@@ -8,8 +8,8 @@
 	<link href='https://css.gg/chevron-down.css' rel='stylesheet'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<script src="../scripts.js"></script>
-	<link href="../style.css" rel="stylesheet">
+	<script src="scripts.js"></script>
+	<link href="style.css" rel="stylesheet">
 	<style>
 	.image_holder {
 		display: inline-block;
@@ -78,7 +78,7 @@
 	}
 	
 	
-	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;}
+	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;} .tab-content {overflow-y: scroll; height: 20em;}
 	
 	}
 	@media only screen and (orientation: portrait) {
@@ -124,51 +124,70 @@
 
 <div class="section">
 	<div class="image_holder">
-		<img src="team/placeholder.png"></img>
+		<img src="placeholder.png"></img>
 	</div>
 
 	<div class="body">
-		<h2> Yi Jin, M.D. </h2>
+		<h2> Charles Liu, M.D., Ph.D </h2>
 		<h3> Scientific Advisor </h3>
 	
 		<ul id="tabBar" class="tab">
 			<li onclick="selectTab('tabBar', 'overview');" class="selected" id="overview_tab">Overview</li>
 			<li onclick="selectTab('tabBar', 'background');" id="background_tab">Background</li>
 			<li onclick="selectTab('tabBar', 'awards');" id="awards_tab">Awards</li>
+			<li onclick="selectTab('tabBar', 'publications');" id="publications_tab">Publications</li>
 		</ul>
 		
 		<div id="overview" class="tab-content selected">
-			Dr. Yi Jin graduated medical school at Shanghai First Medical College, completed his postdoctoral fellowships at the University of California, Los Angeles School of Medicine’s Neuropsychiatric Institute and University of California, Irvine Medical Center’s Department of Psychiatry and Human Behavior, and practiced as a clinical psychiatrist until 1986. In the past 25 years, he has taught and researched at the University of California, Irvine, and University of California, San Diego. His main academic interests are the neuro-physical process in normal and abnormal cognition. Using various types of sensory stimulations and neural imaging recording, he has found that the brain’s cognitive process is discrete and its accuracy depends on the internal rhythmic oscillation. The rhythmicity itself, however, is “tunable” via proper external stimulation. This discovery opens up a new avenue for treatment of mental disorders. During the past 13 years, he has studied the novel physical treatment, repetitive transcranial magnetic stimulation (TMS). Using individual’s intrinsic brain wave frequency, he successfully treated many patients with various types of neuropsychiatric disorder, including schizophrenia, major depression, anxiety, substance abuse, and autism. Several results have been published in peer reviewed journals and presented at academic conferences. 
+			Dr. Charles Liu completed his undergraduate education in Chemical Engineering at the University of Michigan, Ann Arbor, and went on to receive his PhD in Chemical/Biomedical Engineering at Rice University. He then attended the Yale University School of Medicine, receiving his MD degree. He trained in neurosurgery at the University of Southern California Affiliated Hospitals.
 			<p></p>
-			In addition to the academic works at the University, he has cofounded two companies, NeoSync, Inc and Brain Treatment Center (BTC) since 2007. Neosync is a privately funded corporation manufacturing portable TMS instruments, and BTC, a psychiatric clinic using EEG and TMS to assist clinical diagnosis and treatment for autistic spectral disorder (ASD) and other mental disorders.
+			He is presently a professor of neurosurgery and neurology and holds the Apuzzo Professorship for Advanced Neurosurgery. Dr. Liu is also Director of the USC Center for Neurorestoration, which functions to bring scientific advances in the laboratory and engineers new tools to restore function to the injured and diseased nervous system. In addition, he serves as the Surgical Director of the USC Comprehensive Epilepsy Program, one of the premier and highest volume surgical epilepsy programs in the world.
+			<p></p>
+			Dr. Liu has received numerous research awards and made a large number of visitorships/invited lectures throughout the world. He serves as Associate Editor of the journal, WORLD NEUROSURGERY and the  principal neurosurgical consultant for the NCAA USC Trojans Athletics Department. He is also a member of the Executive Committee of the Congress of Neurological Surgeons. At Rancho los Amigos, Dr. Liu is Chair of the Department of Neurosurgery and is developing cutting-edge programs in restorative neurosurgery, collaborating with scientists at Caltech and USC, among others.
 		</div>
 		
 		<div id="background" class="tab-content">
 			Education
 			<ul>
-				<li>Shanghai First Medical College, MD, 1983</li>
-				<li>Residencies: Shanghai Mental Hospital, Shanghai Medical University, 1983 - 1986</li>
-			</ul>
-			<br/>
-			Fellowships
-			<ul>
-				<li>UCLA School of Medicine, Neuropsychiatric Institute, 1986-1987</li>
-				<li>Reise-David Child Center, Los Angeles, 1987</li>
-				<li>UCI Medical Center, Department of Psychiatry and Human Behavior, 1987-1988</li>
+				<li>Yale University School of Medicine, MD, 1996</li>
+				<li>Internships: LAC+USC Medical Center, 1996 - 1997</li>
+				<li>Residencies: LAC+USC Medical Center, 1997 - 2003</li>
+				<li>Fellowships: LAC+USC Medical Center, 2000 - 2000</li>
 			</ul>
 			<br/>
 			Professional Society Memberships
 			<ul>
-				<li>Executive Board Member for the EEG & Clinical Neuroscience Society</li>
+				<li>Congress of Neurological Surgeon</li>
+				<li>American Association of Neurological Surgeons</li>
+				<li>Society of University Neurosurgeons</li>
+				<li>Neurosurgical Society of America</li>
+				<li>Pituitary Society</li>
+				<li>American Institute of Chemical Engineers Professional Society</li>
+				<li>American Chemical Society</li>
+				<li>American Epilepsy Society</li>
+				<li>American Society of Functional and Stereotactic Neurosurgery</li>
+				<li>Academy of Neurosurgery</li>
 			</ul>
-
 		</div>
 		
 		<div id="awards" class="tab-content">
 			Awards
 			<ul>
-				<li>2002, Balter Award, Journal of Clinical Psychopharmacology</li>
-				<li>1991, MRES Award for Pharmaco-EEG, University of California, Irvine</li>
+				<li>2015 and 2011 list of America's Top Doctors, compiled by Castle Connolly Medical Ltd. </li>
+				<li>CNS Margot Anderson Foundation Fellowship for Brain Restoration Research, Congress of Neurological Surgeons, 2002 </li>
+				<li>Baxter Scholar, University of Southern California Keck School of Medicine, 2003 </li>
+				<li>AANS Young Clinician Investigator Award, American Association of Neurological Surgeons, 2004 </li>
+				<li>Honorary Member, Hong Kong Neurosurgical Society, 2005-present </li>
+				<li>Anspach Research Award for Cerebrovascular Diseases and Cerebral Protection, 2006 </li>
+				<li>Honorary Member, Chinese Neurosurgical Society, 2008-present </li>
+				<li>Michael L. J. Apuzzo Professorship for Advanced Neurosurgery, Keck School of Medicine of USC, 2009-present	</li>
+			</ul>
+		</div>
+		
+		<div id="publications" class="tab-content">
+			Publications
+			<ul>
+				<li>https://keck.usc.edu/faculty-search/charles-liu/</li>
 			</ul>
 		</div>
 	</div>
