--- a/JJ.html
+++ b/JJ.html
@@ -8,8 +8,8 @@
 	<link href='https://css.gg/chevron-down.css' rel='stylesheet'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<script src="../scripts.js"></script>
-	<link href="../style.css" rel="stylesheet">
+	<script src="scripts.js"></script>
+	<link href="style.css" rel="stylesheet">
 	<style>
 	.image_holder {
 		display: inline-block;
@@ -124,47 +124,21 @@
 
 <div class="section">
 	<div class="image_holder">
-		<img src="team/placeholder.png"></img>
+		<img src="placeholder.png"></img>
 	</div>
 
 	<div class="body">
-		<h2> Fabio Macciardi, M.D., Ph.D.  </h2>
-		<h3> Scientific Advisor </h3>
+		<h2> Jyh-Chung "JJ" Han </h2>
+		<h3> Co-Founder </h3>
 	
 		<ul id="tabBar" class="tab">
 			<li onclick="selectTab('tabBar', 'overview');" class="selected" id="overview_tab">Overview</li>
-			<li onclick="selectTab('tabBar', 'background');" id="background_tab">Background</li>
-			<li onclick="selectTab('tabBar', 'awards');" id="awards_tab">Awards</li>
 		</ul>
 		
 		<div id="overview" class="tab-content selected">
-			Dr. Fabio Macciardi is presently a Research Professor of Psychiatry at USC’s Keck School of Medicine, and Professor of Molecular Psychiatry at the University of California, Irvine.
+			Jyh-Chung Han graduated from the National Taipei University of Technology with a BA in Civil Engineering. Since then, he has gained extensive business experience in real estate, construction, company management, and company operations within the Koo Organization. In the past 30 years, he has successfully established and operated many oversea corporations for the Koo family including, but not limited to, managing resorts, hotels, medical facilities, and transportation. His counsel has been widely sought in these various fields. 
 			<p></p>
-			Dr. Macciardi is both a certified (EU) clinical psychiatrist and epidemiologist and a well-established psychiatric geneticist with years of experience in large-scale and international collaborations. He has identified PS1 the first gene for early onset Alzheimer's disease (Hyslop et al, 1992) and several genes (DAOA, DAAO, AHI1) for schizophrenia, now definitively confirmed. Most of his work has been on the genetics of complex disorders (other than AD and schizophrenia, He worked on bipolar disorders, autism, depression, autoimmune disorders and ALS) and pharmacogenomics. At present, his lab activities are mostly related to study the function and evolution of genes in complex traits and to next-generation sequencing (NGS) of complex traits. In 2010, his team published the first paper that shows the identification of a gene and its molecular defect in a rare Mendelian disorder using NGS and they are now extending this approach to find the molecular bases of genes involved in schizophrenia, autism and AD. His current major research interests are related to studying the fine mechanisms of gene regulation exerted by the non-coding DNA. All across his research, development of genetic epidemiology methods and algorithms remains a major focus of activity.
-		</div>
-		
-		<div id="background" class="tab-content">
-			Education
-			<ul>
-				<li>University of Milan, School of Medicine, M.D. 1975-1982 </li>
-				<li>University of Catania, School of Medicine, Ph.D. Psychiatric Genetics, 1983-1987 </li>
-				<li>Residency:  University of Pavia, School of Medicine, Epidemiology and Statistics, 1987-1990 </li>
-				<li>Post-Doc: Yale University, School of Medicine, 1990-1991, Human Genetics </li>
-			</ul>
-			<br/>
-			Professional Society Memberships
-			<ul>
-				<li>Member of the Scientific Advisory Board for the "Center for the Study of the genetics of complex behavior and aging" at the S. Herzog memorial Hospital, Jerusalem, Israel </li>
-				<li>Chair, Genomics Working Group, BIRN Consortium </li>
-			</ul>
-		</div>
-		
-		<div id="awards" class="tab-content">
-			Awards
-			<ul>
-				<li>2000, NARSAD Independent Investigator Award</li>
-				<li>1985, Italian Ministry of Education Scholarship, Human Genetics</li>
-			</ul>
+			Mr. Han co-founded Newport Brain Research Laboratory (NBRL), Brain Treatment Center (BTC), and helped create the MRT and MeRT technologies currently used by WaveNeuroscience, Inc. 
 		</div>
 	</div>
 </div>
