--- a/Jack_Song.html
+++ b/Jack_Song.html
@@ -8,8 +8,8 @@
 	<link href='https://css.gg/chevron-down.css' rel='stylesheet'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<script src="../scripts.js"></script>
-	<link href="../style.css" rel="stylesheet">
+	<script src="scripts.js"></script>
+	<link href="style.css" rel="stylesheet">
 	<style>
 	.image_holder {
 		display: inline-block;
@@ -77,7 +77,6 @@
 		display: block;
 	}
 	
-	
 	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;}
 	
 	}
@@ -124,21 +123,23 @@
 
 <div class="section">
 	<div class="image_holder">
-		<img src="team/placeholder.png"></img>
+		<img src="placeholder.png"></img>
 	</div>
 
 	<div class="body">
-		<h2> Jyh-Chung "JJ" Han </h2>
-		<h3> Co-Founder </h3>
+		<h2> Name </h2>
+		<h3> Position </h3>
 	
 		<ul id="tabBar" class="tab">
 			<li onclick="selectTab('tabBar', 'overview');" class="selected" id="overview_tab">Overview</li>
 		</ul>
 		
 		<div id="overview" class="tab-content selected">
-			Jyh-Chung Han graduated from the National Taipei University of Technology with a BA in Civil Engineering. Since then, he has gained extensive business experience in real estate, construction, company management, and company operations within the Koo Organization. In the past 30 years, he has successfully established and operated many oversea corporations for the Koo family including, but not limited to, managing resorts, hotels, medical facilities, and transportation. His counsel has been widely sought in these various fields. 
+			Jack Song is a graduate of the National Kaohsiung First University of Science and Technology and Computer and Communication Research Institute and has over 20 years of experience studying and teaching magnetic field application and bioelectrophysiology.
 			<p></p>
-			Mr. Han co-founded Newport Brain Research Laboratory (NBRL), Brain Treatment Center (BTC), and helped create the MRT and MeRT technologies currently used by WaveNeuroscience, Inc. 
+			From 1999 to 2004, he worked as Service Manager in charge of managing the neuroelectrophsiology equipment at DANTEC in Taiwan. In 2004, he became the Product Manager responsible for Taiwan EMG / EEG / Urinary tract dynamics equipment at Medtronic. In 2010, he took on the role of Product Manager - Sales and Maintenance Management for MagVenture TMS.
+			<p></p>
+			His current work involves magnetic stimulation therapy for medical application, product promotion, and equipment maintenance.
 		</div>
 	</div>
 </div>
