--- a/Jin.html
+++ b/Jin.html
@@ -8,8 +8,8 @@
 	<link href='https://css.gg/chevron-down.css' rel='stylesheet'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<script src="../scripts.js"></script>
-	<link href="../style.css" rel="stylesheet">
+	<script src="scripts.js"></script>
+	<link href="style.css" rel="stylesheet">
 	<style>
 	.image_holder {
 		display: inline-block;
@@ -124,23 +124,52 @@
 
 <div class="section">
 	<div class="image_holder">
-		<img src="team/placeholder.png"></img>
+		<img src="placeholder.png"></img>
 	</div>
 
 	<div class="body">
-		<h2> Conway Ho </h2>
-		<h3> Co-Founder </h3>
+		<h2> Yi Jin, M.D. </h2>
+		<h3> Scientific Advisor </h3>
 	
 		<ul id="tabBar" class="tab">
 			<li onclick="selectTab('tabBar', 'overview');" class="selected" id="overview_tab">Overview</li>
+			<li onclick="selectTab('tabBar', 'background');" id="background_tab">Background</li>
+			<li onclick="selectTab('tabBar', 'awards');" id="awards_tab">Awards</li>
 		</ul>
 		
 		<div id="overview" class="tab-content selected">
-			Conway Ho is a successful businessman and entrepreneur. He founded his own video game, entertainment, and software development business early in college. He is the co-founder of HanaHo Games, which has contracted with Microsoft, Capcom, Electronic Arts, Sega, Konami, and Namco, to name a few. 
+			Dr. Yi Jin graduated medical school at Shanghai First Medical College, completed his postdoctoral fellowships at the University of California, Los Angeles School of Medicine’s Neuropsychiatric Institute and University of California, Irvine Medical Center’s Department of Psychiatry and Human Behavior, and practiced as a clinical psychiatrist until 1986. In the past 25 years, he has taught and researched at the University of California, Irvine, and University of California, San Diego. His main academic interests are the neuro-physical process in normal and abnormal cognition. Using various types of sensory stimulations and neural imaging recording, he has found that the brain’s cognitive process is discrete and its accuracy depends on the internal rhythmic oscillation. The rhythmicity itself, however, is “tunable” via proper external stimulation. This discovery opens up a new avenue for treatment of mental disorders. During the past 13 years, he has studied the novel physical treatment, repetitive transcranial magnetic stimulation (TMS). Using individual’s intrinsic brain wave frequency, he successfully treated many patients with various types of neuropsychiatric disorder, including schizophrenia, major depression, anxiety, substance abuse, and autism. Several results have been published in peer reviewed journals and presented at academic conferences. 
 			<p></p>
-			He also co-founded Newport Brain Research Laboratory (NBRL), Brain Treatment Center (BTC), and was instrumental to the creations of MRT and MeRT technologies currently used by WaveNeuroscience, Inc. 
-			<p></p>
-			Mr. Ho now brings his entrepreneurial leadership and experience to Nerve Principles, GDC’s Neuro-Optimization division. Here, he focuses on research and treatment of neurological and psychiatric disorders. 
+			In addition to the academic works at the University, he has cofounded two companies, NeoSync, Inc and Brain Treatment Center (BTC) since 2007. Neosync is a privately funded corporation manufacturing portable TMS instruments, and BTC, a psychiatric clinic using EEG and TMS to assist clinical diagnosis and treatment for autistic spectral disorder (ASD) and other mental disorders.
+		</div>
+		
+		<div id="background" class="tab-content">
+			Education
+			<ul>
+				<li>Shanghai First Medical College, MD, 1983</li>
+				<li>Residencies: Shanghai Mental Hospital, Shanghai Medical University, 1983 - 1986</li>
+			</ul>
+			<br/>
+			Fellowships
+			<ul>
+				<li>UCLA School of Medicine, Neuropsychiatric Institute, 1986-1987</li>
+				<li>Reise-David Child Center, Los Angeles, 1987</li>
+				<li>UCI Medical Center, Department of Psychiatry and Human Behavior, 1987-1988</li>
+			</ul>
+			<br/>
+			Professional Society Memberships
+			<ul>
+				<li>Executive Board Member for the EEG & Clinical Neuroscience Society</li>
+			</ul>
+
+		</div>
+		
+		<div id="awards" class="tab-content">
+			Awards
+			<ul>
+				<li>2002, Balter Award, Journal of Clinical Psychopharmacology</li>
+				<li>1991, MRES Award for Pharmaco-EEG, University of California, Irvine</li>
+			</ul>
 		</div>
 	</div>
 </div>
