--- a/innovators.html
+++ b/innovators.html
@@ -104,20 +104,20 @@ text-align: center;
 	</div>
 	
 	<ul class="cards">
-		<li onclick="window.location = 'team/Ian.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Ian.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Ian</h3>
 			<h4> President </h4>
 		</div></li>
 		
-		<li onclick="window.location = 'team/JJ.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'JJ.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> JJ </h3>
 			<h4> Founder </h4>
 		</div></li>
 		
-		<li onclick="window.location = 'team/Conway.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Conway.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Conway </h3>
 			<h4> Founder </h4>
 		</div></li>
@@ -132,26 +132,26 @@ text-align: center;
 	</div>
 	
 	<ul class="cards">
-		<li onclick="window.location = 'team/Charles_Liu.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Charles_Liu.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Charles Liu, M.D., Ph.D.</h3>
 			<!--h4> Founder </h4-->
 		</div></li>
 		
-		<li onclick="window.location = 'team/Srinivasa_Reddy.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Srinivasa_Reddy.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Srinivasa T. Reddy, Ph.D. </h3>
 			<!--h4> Founder </h4-->
 		</div></li>
 		
-		<li onclick="window.location = 'team/Jin.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Jin.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Jin </h3>
 			<!--h4> Founder </h4-->
 		</div></li>
 		
-		<li onclick="window.location = 'team/Fabio.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Fabio.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Fabio </h3>
 			<!--h4> Founder </h4-->
 		</div></li>
@@ -165,20 +165,20 @@ text-align: center;
 	</div>
 	
 	<ul class="cards">
-		<li onclick="window.location = 'team/Tom_Wu.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Tom_Wu.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Tom Wu </h3>
 			<!--h4> President </h4-->
 		</div></li>
 		
-		<li onclick="window.location = 'team/Liu_Bowen.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Liu_Bowen.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Liu Bowen </h3>
 			<!--h4> Founder </h4-->
 		</div></li>
 		
-		<li onclick="window.location = 'team/Jack_Song.html#content'"><div>
-			<img src="res/team/placeholder_formatted.png" style="margin: auto;"></img>
+		<li onclick="window.location = 'Jack_Song.html#content'"><div>
+			<img src="res/placeholder_formatted.png" style="margin: auto;"></img>
 			<h3> Jack Song </h3>
 			<!--h4> Founder </h4-->
 		</div></li>
