--- a/Conway.html
+++ b/Conway.html
@@ -8,8 +8,8 @@
 	<link href='https://css.gg/chevron-down.css' rel='stylesheet'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<script src="../scripts.js"></script>
-	<link href="../style.css" rel="stylesheet">
+	<script src="scripts.js"></script>
+	<link href="style.css" rel="stylesheet">
 	<style>
 	.image_holder {
 		display: inline-block;
@@ -77,6 +77,7 @@
 		display: block;
 	}
 	
+	
 	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;}
 	
 	}
@@ -123,23 +124,23 @@
 
 <div class="section">
 	<div class="image_holder">
-		<img src="team/placeholder.png"></img>
+		<img src="placeholder.png"></img>
 	</div>
 
 	<div class="body">
-		<h2> Name </h2>
-		<h3> Position </h3>
+		<h2> Conway Ho </h2>
+		<h3> Co-Founder </h3>
 	
 		<ul id="tabBar" class="tab">
 			<li onclick="selectTab('tabBar', 'overview');" class="selected" id="overview_tab">Overview</li>
 		</ul>
 		
 		<div id="overview" class="tab-content selected">
-			Jack Song is a graduate of the National Kaohsiung First University of Science and Technology and Computer and Communication Research Institute and has over 20 years of experience studying and teaching magnetic field application and bioelectrophysiology.
+			Conway Ho is a successful businessman and entrepreneur. He founded his own video game, entertainment, and software development business early in college. He is the co-founder of HanaHo Games, which has contracted with Microsoft, Capcom, Electronic Arts, Sega, Konami, and Namco, to name a few. 
 			<p></p>
-			From 1999 to 2004, he worked as Service Manager in charge of managing the neuroelectrophsiology equipment at DANTEC in Taiwan. In 2004, he became the Product Manager responsible for Taiwan EMG / EEG / Urinary tract dynamics equipment at Medtronic. In 2010, he took on the role of Product Manager - Sales and Maintenance Management for MagVenture TMS.
+			He also co-founded Newport Brain Research Laboratory (NBRL), Brain Treatment Center (BTC), and was instrumental to the creations of MRT and MeRT technologies currently used by WaveNeuroscience, Inc. 
 			<p></p>
-			His current work involves magnetic stimulation therapy for medical application, product promotion, and equipment maintenance.
+			Mr. Ho now brings his entrepreneurial leadership and experience to Nerve Principles, GDC’s Neuro-Optimization division. Here, he focuses on research and treatment of neurological and psychiatric disorders. 
 		</div>
 	</div>
 </div>
