--- a/Fabio.html
+++ b/Fabio.html
@@ -8,8 +8,8 @@
 	<link href='https://css.gg/chevron-down.css' rel='stylesheet'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<script src="../scripts.js"></script>
-	<link href="../style.css" rel="stylesheet">
+	<script src="scripts.js"></script>
+	<link href="style.css" rel="stylesheet">
 	<style>
 	.image_holder {
 		display: inline-block;
@@ -78,7 +78,7 @@
 	}
 	
 	
-	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;} .tab-content {overflow-y: scroll; height: 20em;}
+	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;}
 	
 	}
 	@media only screen and (orientation: portrait) {
@@ -124,70 +124,46 @@
 
 <div class="section">
 	<div class="image_holder">
-		<img src="team/placeholder.png"></img>
+		<img src="placeholder.png"></img>
 	</div>
 
 	<div class="body">
-		<h2> Charles Liu, M.D., Ph.D </h2>
+		<h2> Fabio Macciardi, M.D., Ph.D.  </h2>
 		<h3> Scientific Advisor </h3>
 	
 		<ul id="tabBar" class="tab">
 			<li onclick="selectTab('tabBar', 'overview');" class="selected" id="overview_tab">Overview</li>
 			<li onclick="selectTab('tabBar', 'background');" id="background_tab">Background</li>
 			<li onclick="selectTab('tabBar', 'awards');" id="awards_tab">Awards</li>
-			<li onclick="selectTab('tabBar', 'publications');" id="publications_tab">Publications</li>
 		</ul>
 		
 		<div id="overview" class="tab-content selected">
-			Dr. Charles Liu completed his undergraduate education in Chemical Engineering at the University of Michigan, Ann Arbor, and went on to receive his PhD in Chemical/Biomedical Engineering at Rice University. He then attended the Yale University School of Medicine, receiving his MD degree. He trained in neurosurgery at the University of Southern California Affiliated Hospitals.
+			Dr. Fabio Macciardi is presently a Research Professor of Psychiatry at USC’s Keck School of Medicine, and Professor of Molecular Psychiatry at the University of California, Irvine.
 			<p></p>
-			He is presently a professor of neurosurgery and neurology and holds the Apuzzo Professorship for Advanced Neurosurgery. Dr. Liu is also Director of the USC Center for Neurorestoration, which functions to bring scientific advances in the laboratory and engineers new tools to restore function to the injured and diseased nervous system. In addition, he serves as the Surgical Director of the USC Comprehensive Epilepsy Program, one of the premier and highest volume surgical epilepsy programs in the world.
-			<p></p>
-			Dr. Liu has received numerous research awards and made a large number of visitorships/invited lectures throughout the world. He serves as Associate Editor of the journal, WORLD NEUROSURGERY and the  principal neurosurgical consultant for the NCAA USC Trojans Athletics Department. He is also a member of the Executive Committee of the Congress of Neurological Surgeons. At Rancho los Amigos, Dr. Liu is Chair of the Department of Neurosurgery and is developing cutting-edge programs in restorative neurosurgery, collaborating with scientists at Caltech and USC, among others.
+			Dr. Macciardi is both a certified (EU) clinical psychiatrist and epidemiologist and a well-established psychiatric geneticist with years of experience in large-scale and international collaborations. He has identified PS1 the first gene for early onset Alzheimer's disease (Hyslop et al, 1992) and several genes (DAOA, DAAO, AHI1) for schizophrenia, now definitively confirmed. Most of his work has been on the genetics of complex disorders (other than AD and schizophrenia, He worked on bipolar disorders, autism, depression, autoimmune disorders and ALS) and pharmacogenomics. At present, his lab activities are mostly related to study the function and evolution of genes in complex traits and to next-generation sequencing (NGS) of complex traits. In 2010, his team published the first paper that shows the identification of a gene and its molecular defect in a rare Mendelian disorder using NGS and they are now extending this approach to find the molecular bases of genes involved in schizophrenia, autism and AD. His current major research interests are related to studying the fine mechanisms of gene regulation exerted by the non-coding DNA. All across his research, development of genetic epidemiology methods and algorithms remains a major focus of activity.
 		</div>
 		
 		<div id="background" class="tab-content">
 			Education
 			<ul>
-				<li>Yale University School of Medicine, MD, 1996</li>
-				<li>Internships: LAC+USC Medical Center, 1996 - 1997</li>
-				<li>Residencies: LAC+USC Medical Center, 1997 - 2003</li>
-				<li>Fellowships: LAC+USC Medical Center, 2000 - 2000</li>
+				<li>University of Milan, School of Medicine, M.D. 1975-1982 </li>
+				<li>University of Catania, School of Medicine, Ph.D. Psychiatric Genetics, 1983-1987 </li>
+				<li>Residency:  University of Pavia, School of Medicine, Epidemiology and Statistics, 1987-1990 </li>
+				<li>Post-Doc: Yale University, School of Medicine, 1990-1991, Human Genetics </li>
 			</ul>
 			<br/>
 			Professional Society Memberships
 			<ul>
-				<li>Congress of Neurological Surgeon</li>
-				<li>American Association of Neurological Surgeons</li>
-				<li>Society of University Neurosurgeons</li>
-				<li>Neurosurgical Society of America</li>
-				<li>Pituitary Society</li>
-				<li>American Institute of Chemical Engineers Professional Society</li>
-				<li>American Chemical Society</li>
-				<li>American Epilepsy Society</li>
-				<li>American Society of Functional and Stereotactic Neurosurgery</li>
-				<li>Academy of Neurosurgery</li>
+				<li>Member of the Scientific Advisory Board for the "Center for the Study of the genetics of complex behavior and aging" at the S. Herzog memorial Hospital, Jerusalem, Israel </li>
+				<li>Chair, Genomics Working Group, BIRN Consortium </li>
 			</ul>
 		</div>
 		
 		<div id="awards" class="tab-content">
 			Awards
 			<ul>
-				<li>2015 and 2011 list of America's Top Doctors, compiled by Castle Connolly Medical Ltd. </li>
-				<li>CNS Margot Anderson Foundation Fellowship for Brain Restoration Research, Congress of Neurological Surgeons, 2002 </li>
-				<li>Baxter Scholar, University of Southern California Keck School of Medicine, 2003 </li>
-				<li>AANS Young Clinician Investigator Award, American Association of Neurological Surgeons, 2004 </li>
-				<li>Honorary Member, Hong Kong Neurosurgical Society, 2005-present </li>
-				<li>Anspach Research Award for Cerebrovascular Diseases and Cerebral Protection, 2006 </li>
-				<li>Honorary Member, Chinese Neurosurgical Society, 2008-present </li>
-				<li>Michael L. J. Apuzzo Professorship for Advanced Neurosurgery, Keck School of Medicine of USC, 2009-present	</li>
-			</ul>
-		</div>
-		
-		<div id="publications" class="tab-content">
-			Publications
-			<ul>
-				<li>https://keck.usc.edu/faculty-search/charles-liu/</li>
+				<li>2000, NARSAD Independent Investigator Award</li>
+				<li>1985, Italian Ministry of Education Scholarship, Human Genetics</li>
 			</ul>
 		</div>
 	</div>
