--- a/home.html
+++ b/home.html
@@ -195,7 +195,7 @@
 </div>
 
 <div id="about-us" class="section" style="padding-top: 90px; padding-bottom: 120px; background: #425EC9;">
-	<div class="header" style="margin-left 0">
+	<div class="header" style="margin-left: 0">
 		<div style="display: block; text-align: center;">
 			<div class="sec-header" style="position: relative; display: inline-block; margin-bottom: 20px;">
 				<span>
